Make source compatible with Java 8
There are some future projects that will require building on Java 8, so
just make these minor mechanical changes to enable us to target Java 8
easily in the future.

Development environments don't need to change since the Java compiler
and maven allow us to target an older Java version even though we are on
a newer compiler.