@@ -39,10 +39,15 @@ import com.amazonaws.athena.connector.lambda.metadata.ListTablesResponse;
 import com.amazonaws.athena.connectors.kafka.dto.SplitParameters;
 import com.amazonaws.athena.connectors.kafka.dto.TopicPartitionPiece;
 import com.amazonaws.athena.connectors.kafka.dto.TopicSchema;
+import com.amazonaws.services.glue.AWSGlue;
 import com.amazonaws.services.glue.AWSGlueClientBuilder;
 import com.amazonaws.services.glue.model.GetRegistryRequest;
+import com.amazonaws.services.glue.model.GetRegistryResult;
 import com.amazonaws.services.glue.model.ListRegistriesRequest;
+import com.amazonaws.services.glue.model.ListRegistriesResult;
+import com.amazonaws.services.glue.model.ListSchemasResult;
 import com.amazonaws.services.glue.model.RegistryId;
+import com.amazonaws.services.glue.model.RegistryListItem;
 import com.google.common.annotations.VisibleForTesting;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.FieldType;
@@ -83,6 +88,13 @@ public class KafkaMetadataHandler extends MetadataHandler
         this.kafkaConsumer = kafkaConsumer;
     }
 
+    private Stream<String> filteredRegistriesStream(Stream<RegistryListItem> registries)
+    {
+        return registries
+            .filter(r -> r.getDescription() != null && r.getDescription().contains(REGISTRY_MARKER))
+            .map(r -> r.getRegistryName());
+    }
+
     /**
      * It will list the schema name which is set to default.
      *
@@ -94,18 +106,17 @@ public class KafkaMetadataHandler extends MetadataHandler
     public ListSchemasResponse doListSchemaNames(BlockAllocator blockAllocator, ListSchemasRequest listSchemasRequest)
     {
         LOGGER.info("doListSchemaNames called with Catalog: {}", listSchemasRequest.getCatalogName());
-        var glue = AWSGlueClientBuilder.defaultClient();
-        var listRequest = new ListRegistriesRequest().withMaxResults(100);
-        var start = glue.listRegistries(listRequest);
-        List<String> registries = Stream.iterate(
-            start,
-            r -> r != null,
-            r -> (r.getNextToken() == null) ? null : glue.listRegistries(listRequest.withNextToken(r.getNextToken())))
-                .flatMap(r -> r.getRegistries().stream())
-                .filter(r -> r.getDescription() != null && r.getDescription().contains(REGISTRY_MARKER))
-                .map(r -> r.getRegistryName())
-                .collect(Collectors.toList());
-        var result = new ListSchemasResponse(listSchemasRequest.getCatalogName(), registries);
+        AWSGlue glue = AWSGlueClientBuilder.defaultClient();
+        Stream<String> allFilteredRegistries = Stream.empty();
+        for (ListRegistriesRequest listRequest = new ListRegistriesRequest().withMaxResults(100); listRequest != null; ) {
+            ListRegistriesResult currentResult = glue.listRegistries(listRequest);
+            // Setup the next request
+            String nextToken = currentResult.getNextToken();
+            listRequest = (nextToken == null) ? null : listRequest.withNextToken(nextToken);
+            // Concat the results from the current page
+            allFilteredRegistries = Stream.concat(allFilteredRegistries, filteredRegistriesStream(currentResult.getRegistries().stream()));
+        }
+        ListSchemasResponse result = new ListSchemasResponse(listSchemasRequest.getCatalogName(), allFilteredRegistries.collect(Collectors.toList()));
         LOGGER.debug("doListSchemaNames result: {}", result);
         return result;
     }
@@ -113,8 +124,8 @@ public class KafkaMetadataHandler extends MetadataHandler
     private String resolveGlueRegistryName(String glueRegistryName)
     {
         try {
-            var glue = AWSGlueClientBuilder.defaultClient();
-            var getRegistryResult = glue.getRegistry(new GetRegistryRequest().withRegistryId(new RegistryId().withRegistryName(glueRegistryName)));
+            AWSGlue glue = AWSGlueClientBuilder.defaultClient();
+            GetRegistryResult getRegistryResult = glue.getRegistry(new GetRegistryRequest().withRegistryId(new RegistryId().withRegistryName(glueRegistryName)));
             if (!(getRegistryResult.getDescription() != null && getRegistryResult.getDescription().contains(REGISTRY_MARKER))) {
                 throw new Exception(String.format("Found a registry with a matching name [%s] but not marked for AthenaFederationKafka", glueRegistryName));
             }
@@ -139,44 +150,50 @@ public class KafkaMetadataHandler extends MetadataHandler
         LOGGER.info("doListTables: {}", listTablesRequest);
         String glueRegistryNameResolved = resolveGlueRegistryName(listTablesRequest.getSchemaName());
         LOGGER.info("Resolved Glue registry name to: {}", glueRegistryNameResolved);
-        var glue = AWSGlueClientBuilder.defaultClient();
+        AWSGlue glue = AWSGlueClientBuilder.defaultClient();
         // In this situation we want to loop through all the pages to return up to the MAX_RESULTS size
         if (listTablesRequest.getPageSize() == UNLIMITED_PAGE_SIZE_VALUE) {
             LOGGER.info("Request page size is UNLIMITED_PAGE_SIZE_VALUE");
-            var listRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
-                .withRegistryId(new RegistryId().withRegistryName(glueRegistryNameResolved))
-                .withMaxResults(100);
-            var start = glue.listSchemas(listRequest);
-            List<TableName> tableNames = Stream.iterate(
-                start,
-                r -> r != null,
-                r -> (r.getNextToken() == null) ? null : glue.listSchemas(listRequest.withNextToken(r.getNextToken())))
-                    .flatMap(r -> r.getSchemas().stream())
-                    .limit(MAX_RESULTS + 1)
-                    .map(schemaListItem -> schemaListItem.getSchemaName())
-                    .map(glueSchemaName -> new TableName(glueRegistryNameResolved, glueSchemaName))
-                    .collect(Collectors.toList());
-            if (tableNames.size() > MAX_RESULTS) {
-                throw new RuntimeException(
-                    String.format("Exceeded maximum result size. Current doListTables result size: %d", tableNames.size()));
+            List<TableName> allTableNames = new ArrayList();
+            for (
+                com.amazonaws.services.glue.model.ListSchemasRequest listRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
+                    .withRegistryId(new RegistryId().withRegistryName(glueRegistryNameResolved))
+                    .withMaxResults(100);
+                listRequest != null;
+            ) {
+                ListSchemasResult currentResult = glue.listSchemas(listRequest);
+                // Setup the next request
+                String nextToken = currentResult.getNextToken();
+                listRequest = (nextToken == null) ? null : listRequest.withNextToken(nextToken);
+                // Append the results from the current page
+                allTableNames.addAll(
+                    currentResult.getSchemas().stream()
+                        .map(schemaListItem -> schemaListItem.getSchemaName())
+                        .map(glueSchemaName -> new TableName(glueRegistryNameResolved, glueSchemaName))
+                        .collect(Collectors.toList())
+                );
+                if (allTableNames.size() > MAX_RESULTS) {
+                    throw new RuntimeException(
+                        String.format("Exceeded maximum result size. Current doListTables result size: %d", allTableNames.size()));
+                }
             }
-            var result = new ListTablesResponse(listTablesRequest.getCatalogName(), tableNames, null);
+            ListTablesResponse result = new ListTablesResponse(listTablesRequest.getCatalogName(), allTableNames, null);
             LOGGER.debug("doListTables result: {}", result);
             return result;
         }
 
         // Otherwise don't retrieve all pages, just pass through the page token.
-        var pageSize = Math.min(listTablesRequest.getPageSize(), 100); // 100 is the maximum Glue allows
-        var listRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
+        int pageSize = Math.min(listTablesRequest.getPageSize(), 100); // 100 is the maximum Glue allows
+        com.amazonaws.services.glue.model.ListSchemasRequest listRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
             .withRegistryId(new RegistryId().withRegistryName(glueRegistryNameResolved))
             .withMaxResults(pageSize);
-        var listSchemasResult = glue.listSchemas(listRequest);
-        var tableNames = listSchemasResult.getSchemas()
+        ListSchemasResult listSchemasResult = glue.listSchemas(listRequest);
+        List<TableName> tableNames = listSchemasResult.getSchemas()
             .stream()
             .map(schemaListItem -> schemaListItem.getSchemaName())
             .map(glueSchemaName -> new TableName(glueRegistryNameResolved, glueSchemaName))
             .collect(Collectors.toList());
-        var result = new ListTablesResponse(listTablesRequest.getCatalogName(), tableNames, listSchemasResult.getNextToken());
+        ListTablesResponse result = new ListTablesResponse(listTablesRequest.getCatalogName(), tableNames, listSchemasResult.getNextToken());
         LOGGER.debug("doListTables [paginated] result: {}", result);
         return result;
     }
@@ -184,20 +201,24 @@ public class KafkaMetadataHandler extends MetadataHandler
     private String findGlueRegistryNameIgnoringCasing(String glueRegistryNameIn)
     {
         LOGGER.debug("findGlueRegistryNameIgnoringCasing {}", glueRegistryNameIn);
-        var glue = AWSGlueClientBuilder.defaultClient();
-        var listRequest = new ListRegistriesRequest().withMaxResults(100);
-        var start = glue.listRegistries(listRequest);
-        var result = Stream.iterate(
-            start,
-            r -> r != null,
-            r -> (r.getNextToken() == null) ? null : glue.listRegistries(listRequest.withNextToken(r.getNextToken())))
-                .flatMap(r -> r.getRegistries().stream())
-                .filter(r -> r.getDescription() != null && r.getDescription().contains(REGISTRY_MARKER))
-                .map(r -> r.getRegistryName())
-                .filter(r ->  r.equalsIgnoreCase(glueRegistryNameIn))
-                .findAny().get();
-        LOGGER.debug("findGlueRegistryNameIgnoringCasing result: {}", result);
-        return result;
+        AWSGlue glue = AWSGlueClientBuilder.defaultClient();
+        for (ListRegistriesRequest listRequest = new ListRegistriesRequest().withMaxResults(100); listRequest != null; ) {
+            ListRegistriesResult currentResult = glue.listRegistries(listRequest);
+            // Setup the next request
+            String nextToken = currentResult.getNextToken();
+            listRequest = (nextToken == null) ? null : listRequest.withNextToken(nextToken);
+            // Try to find the registry ignoring the case
+            java.util.Optional<String> result = filteredRegistriesStream(currentResult.getRegistries().stream())
+                .filter(r -> r.equalsIgnoreCase(glueRegistryNameIn))
+                .findAny();
+            // Continue searching through the other pages if we haven't found the registry yet
+            if (!result.isPresent()) {
+                continue;
+            }
+            LOGGER.debug("findGlueRegistryNameIgnoringCasing result: {}", result.get());
+            return result.get();
+        }
+        throw new RuntimeException(String.format("Could not find Glue Registry: %s", glueRegistryNameIn));
     }
 
     // Assumes that glueRegistryNameIn is already resolved to the right name
@@ -205,21 +226,31 @@ public class KafkaMetadataHandler extends MetadataHandler
     {
         LOGGER.debug("findGlueSchemaNameIgnoringCasing {} {}", glueRegistryNameIn, glueSchemaNameIn);
         // List all schemas under the input registry
-        var glue = AWSGlueClientBuilder.defaultClient();
-        var listSchemasRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
-            .withRegistryId(new RegistryId().withRegistryName(glueRegistryNameIn))
-            .withMaxResults(100);
-        var start = glue.listSchemas(listSchemasRequest);
-        var result = Stream.iterate(
-            start,
-            r -> r != null,
-            r -> (r.getNextToken() == null) ? null : glue.listSchemas(listSchemasRequest.withNextToken(r.getNextToken())))
-                .flatMap(r -> r.getSchemas().stream())
+        AWSGlue glue = AWSGlueClientBuilder.defaultClient();
+        for (
+            com.amazonaws.services.glue.model.ListSchemasRequest listRequest = new com.amazonaws.services.glue.model.ListSchemasRequest()
+                .withRegistryId(new RegistryId().withRegistryName(glueRegistryNameIn))
+                .withMaxResults(100);
+            listRequest != null;
+        ) {
+            ListSchemasResult currentResult = glue.listSchemas(listRequest);
+            // Setup the next request
+            String nextToken = currentResult.getNextToken();
+            listRequest = (nextToken == null) ? null : listRequest.withNextToken(nextToken);
+            // Find the schema name ignoring the case in this page
+            java.util.Optional<String> foundSchema = currentResult.getSchemas().stream()
                 .map(schemaListItem -> schemaListItem.getSchemaName())
                 .filter(glueSchemaName -> glueSchemaName.equalsIgnoreCase(glueSchemaNameIn))
-                .findAny().get();
-        LOGGER.debug("findGlueSchemaNameIgnoringCasing result: {}", result);
-        return result;
+                .findAny();
+            // Continue looking at the next page if not found
+            if (!foundSchema.isPresent()) {
+                continue;
+            }
+            // Return the found schema
+            LOGGER.debug("findGlueSchemaNameIgnoringCasing result: {}", foundSchema.get());
+            return foundSchema.get();
+        }
+        throw new RuntimeException(String.format("Could not find Glue Schema: %s", glueSchemaNameIn));
     }
 
     /**
@@ -244,7 +275,7 @@ public class KafkaMetadataHandler extends MetadataHandler
             String glueSchemaNameResolved = findGlueSchemaNameIgnoringCasing(glueRegistryNameResolved, getTableRequest.getTableName().getTableName());
             tableSchema = getSchema(glueRegistryNameResolved, glueSchemaNameResolved);
         }
-        var result = new GetTableResponse(
+        GetTableResponse result = new GetTableResponse(
             getTableRequest.getCatalogName(),
             new TableName(
                 tableSchema.getCustomMetadata().get("glueRegistryName"),
@@ -394,7 +425,7 @@ public class KafkaMetadataHandler extends MetadataHandler
                     true,
                     KafkaUtils.toArrowType(it.getType()),
                     null,
-                    Map.of(
+                    com.google.common.collect.ImmutableMap.of(
                             "mapping", it.getMapping(),
                             "formatHint", it.getFormatHint(),
                             "type", it.getType()
