@@ -111,7 +111,7 @@ public class AmazonMskUtilsTest {
     @Mock
     AWSGlue awsGlue;
 
-    final java.util.Map<String, String> configOptions = Map.of(
+    final java.util.Map<String, String> configOptions = com.google.common.collect.ImmutableMap.of(
         "glue_registry_arn", "arn:aws:glue:us-west-2:123456789101:registry/Athena-Kafka",
         "secret_manager_kafka_creds_name", "testSecret",
         "kafka_endpoint", "12.207.18.179:9092",
@@ -158,12 +158,12 @@ public class AmazonMskUtilsTest {
         Mockito.when(amazonS3Client.getObject(any())).thenReturn(s3Obj);
         S3ObjectSummary s3 = new S3ObjectSummary();
         s3.setKey("test/key");
-        Mockito.when(oList.getObjectSummaries()).thenReturn(List.of(s3));
+        Mockito.when(oList.getObjectSummaries()).thenReturn(com.google.common.collect.ImmutableList.of(s3));
     }
 
     @Test
     public void testGetScramAuthKafkaProperties() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", AmazonMskUtils.AuthType.SASL_SSL_SCRAM_SHA512.toString());
         String sasljaasconfig = "org.apache.kafka.common.security.scram.ScramLoginModule required username=\"admin\" password=\"test\";";
         Properties properties = getKafkaProperties(testConfigOptions);
@@ -174,7 +174,7 @@ public class AmazonMskUtilsTest {
 
     @Test
     public void testGetIAMAuthKafkaProperties() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", AmazonMskUtils.AuthType.SASL_SSL_AWS_MSK_IAM.toString());
         Properties properties = getKafkaProperties(testConfigOptions);
         assertEquals("SASL_SSL", properties.get("security.protocol"));
@@ -185,7 +185,7 @@ public class AmazonMskUtilsTest {
 
     @Test
     public void testGetSSLAuthKafkaProperties() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", AmazonMskUtils.AuthType.SSL.toString());
         Properties properties = getKafkaProperties(testConfigOptions);
         assertEquals("SSL", properties.get("security.protocol"));
@@ -212,7 +212,7 @@ public class AmazonMskUtilsTest {
 
     @Test
     public void testGetKafkaConsumerWithSchema() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", AmazonMskUtils.AuthType.NO_AUTH.toString());
         Field field = new Field("name", FieldType.nullable(new ArrowType.Utf8()), null);
         Map<String, String> metadataSchema = new HashMap<>();
@@ -224,7 +224,7 @@ public class AmazonMskUtilsTest {
 
     @Test
     public void testGetKafkaConsumer() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", AmazonMskUtils.AuthType.NO_AUTH.toString());
         Consumer<String, String> consumer = AmazonMskUtils.getKafkaConsumer(testConfigOptions);
         assertNotNull(consumer);
@@ -232,7 +232,7 @@ public class AmazonMskUtilsTest {
 
     @Test
     public void testCreateSplitParam() {
-        Map<String, String> params = Map.of(
+        Map<String, String> params = com.google.common.collect.ImmutableMap.of(
                 SplitParameters.TOPIC, "testTopic",
                 SplitParameters.PARTITION, "0",
                 SplitParameters.START_OFFSET, "0",
@@ -245,13 +245,13 @@ public class AmazonMskUtilsTest {
 
     @Test(expected = RuntimeException.class)
     public void testGetKafkaPropertiesForRuntimeException() throws Exception {
-        var testConfigOptions = new java.util.HashMap(configOptions);
+        java.util.HashMap testConfigOptions = new java.util.HashMap(configOptions);
         testConfigOptions.put("auth_type", "UNKNOWN");
         getKafkaProperties(testConfigOptions);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testGetKafkaPropertiesForIllegalArgumentException() throws Exception {
-        getKafkaProperties(java.util.Map.of());
+        getKafkaProperties(com.google.common.collect.ImmutableMap.of());
     }
 }
